--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 
 <body>
-  <div id="info">About Projects Contact</div>
+  <!--<div id="info">
+      <ul>
+        <li>
+          <a href="https://twitter.com/lextheboywonder" target="_blank"><img src=""></a>
+        </li>
+        <li></li>
+      </ul>
+  </div> -->
   <div id="jumbotron">
     <div id="title">
         <h1>Alexander Mihalopoulos</h1>
@@ -16,11 +23,18 @@
   </div>
   <div id="navbar">
     <ul>
-      <li>Home</li>
+      <li>
+        <a href="amihalopoulos.github.io">Home</a>
+      </li>
       <li>About Me</li>
       <li>Blog</li>
       <li>Projects</li>
       <li>Contact</li>
   </div>
+
+<div id="twitterbox">
+  <a class="twitter-timeline" href="https://twitter.com/lextheboywonder" data-widget-id="558706893955559424">Tweets by @lextheboywonder</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 
 </body>
