Add blog to website

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <a href="amihalopoulos.github.io">Home</a>
       </li>
       <li>About Me</li>
-      <li>Blog</li>
+      <li>
+        <a href="amihalopoulos.github.io/blog/blog.html">Blog</a>
+      </li>
       <li>Projects</li>
       <li>Contact</li>
   </div>
