--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </li>
       <li>About Me</li>
       <li>
-        <a href="amihalopoulos.github.io/blog/blog.html">Blog</a>
+        <a href="blog/blog.html">Blog</a>
       </li>
       <li>Projects</li>
       <li>Contact</li>
