Fix home link from blog page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="navbar">
     <ul>
       <li>
-        <a href="amihalopoulos.github.io">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>About Me</li>
       <li>
