Add other pages

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,26 +23,23 @@
   </div>
   <div id="navbar">
     <ul>
-      <li>
-        <a href="index.html">Home</a>
+      li>
+        <a href="../index.html">Home</a>
       </li>
       <li>
-        <a href="pages/about-me.html">About Me</a>
+        <a href="../page/about-me.html">About Me</a>
       </li>
       <li>
-        <a href="blog/blog.html">Blog</a>
+        <a href="../blog/blog.html">Blog</a>
       </li>
       <li>
-        <a href="pages/projects.html">Projects</a>
+        <a href="../pages/projects.html">Projects</a>
       </li>
       <li>
-        <a href="pages/contact.html">Contact</a>
+        <a href="../pages/contact.html">Contact</a>
       </li>
   </div>
 
-<div id="twitterbox">
-  <a class="twitter-timeline" href="https://twitter.com/lextheboywonder" data-widget-id="558706893955559424">Tweets by @lextheboywonder</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
+<h3>Sorry! There's nothing here yet.. Check back soon!</h3>
 
 </body>
