Add social media buttons

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -42,3 +42,16 @@
 <h3>Sorry! There's nothing here yet.. Check back soon!</h3>
 
 </body>
+
+
+<!--
+  About me
+  From Old Tappan, NJ I'm 22 years old
+
+  Graduated from the University of Maryland with a degree in Management & Entrepreneurship from the Robert H Smith School of Business
+
+  I'm pursuing a career in development because.. I have a passion for creating things, am fascinated by all things programming,
+
+  I love sports and pretty much any type of physical activity (basketball, golf, raquetball, & yoga are the main ones).
+
+  Still waiting for my aha! moment . . .
