--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div id="info">
       <ul>
         <li class="media">
-          <a href="https://twitter.com/lextheboywonder" target="_blank"><img src="icons/twitter(1).png"></a>
+          <a href="https://twitter.com/lextheboywonder" target="_blank"><img src="icons/twitter.png"></a>
         </li>
         <li class="media">
-          <a href="https://github.com/amihalopoulos" target="_blank"><img src="icons/github_alt.png"></a>
+          <a href="https://github.com/amihalopoulos" target="_blank"><img src="icons/github.png"></a>
         </li>
       </ul>
   </div>
