--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div id="info">
+  <!--<div id="info">
       <ul>
         <li class="media">
           <a href="https://twitter.com/lextheboywonder" target="_blank"><img src="icons/twitter.png"></a>
@@ -16,7 +16,7 @@
           <a href="https://github.com/amihalopoulos" target="_blank"><img src="icons/github.png"></a>
         </li>
       </ul>
-  </div>
+  </div> -->
   <div id="jumbotron">
     <div id="title">
         <h1>Alexander Mihalopoulos</h1>
