Finish technical blog 3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
   <title>Alexander Mihalopoulos</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="../stylesheets/newblogstyle.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/newblogstyle.css">
 </head>
 
 <body>
