--- a/index.html
+++ b/index.html
@@ -29,22 +29,41 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="pages/about-me.html">About Me</a>
+        <a href="#about-me">About Me</a>
       </li>
       <li>
-        <a href="blog/blog.html">Blog</a>
-      </li>
-      <li>
-        <a href="pages/projects.html">Projects</a>
+        <a href="#projects">Projects</a>
       </li>
       <li>
         <a href="pages/contact.html">Contact</a>
       </li>
+      <li>
+        <a href="blog/blog.html">Blog</a>
+      </li>
   </div>
+<div id = "homepage_content">
+<div id = "pic">
+  <img src = "icons/alexei-prof.png" id="alexei">
+  <h4>Skills:</h4>
+  <ul>
+    <li>HTML & CSS</li>
+    <li>Ruby</li>
+  </ul>
+</div>
+<div id = "about-me">
+  <h3>About Alexei Mihalopoulos</h3>
+</div>
 
 <div id="twitterbox">
+  <h3>Social</h3>
   <a class="twitter-timeline" href="https://twitter.com/lextheboywonder" data-widget-id="558706893955559424">Tweets by @lextheboywonder</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-
+<div id="projects">
+  <h3>Projects</h3>
+</div>
+<div id="contact">
+  <h3>Contact</h3>
+</div>
+</div>
 </body>
