--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <!DOCTYPE html>
+
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-  <title>Alexander Mihalopoulos</title>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="stylesheets/newblogstyle.css">
+    <title>Alexander Mihalopoulos</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
 </head>
 
 <body>
-  <!--<div id="info">
-      <ul>
-        <li class="media">
-          <a href="https://twitter.com/lextheboywonder" target="_blank"><img src="icons/twitter.png"></a>
-        </li>
-        <li class="media">
-          <a href="https://github.com/amihalopoulos" target="_blank"><img src="icons/github.png"></a>
-        </li>
-      </ul>
-  </div> -->
-  <div id="jumbotron">
-    <div id="title">
-        <h1>Alexander Mihalopoulos</h1>
-        <h4>NYC | Aspiring Web Developer | Student @ Dev Bootcamp <h2>
-    </div>
+  <div id='top_row'>
+      <h1 class='name'>Alexander A. <img id='pic' src='icons/alexei-prof-black.png'> Mihalopoulos</h1>
   </div>
   <div id="navbar">
     <ul>
@@ -29,41 +16,33 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="#about-me">About Me</a>
+        <a href="#about-me">About</a>
       </li>
       <li>
-        <a href="#projects">Projects</a>
-      </li>
-      <li>
-        <a href="pages/contact.html">Contact</a>
+        <a href="./pages/projects.html">Projects</a>
       </li>
       <li>
         <a href="blog/blog.html">Blog</a>
       </li>
   </div>
-<div id = "homepage_content">
-<div id = "pic">
-  <img src = "icons/alexei-prof.png" id="alexei">
-  <h4>Skills:</h4>
-  <ul>
-    <li>HTML & CSS</li>
-    <li>Ruby</li>
-  </ul>
-</div>
-<div id = "about-me">
-  <h3>About Alexei Mihalopoulos</h3>
-</div>
-
-<div id="twitterbox">
-  <h3>Social</h3>
-  <a class="twitter-timeline" href="https://twitter.com/lextheboywonder" data-widget-id="558706893955559424">Tweets by @lextheboywonder</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
-<div id="projects">
-  <h3>Projects</h3>
-</div>
-<div id="contact">
-  <h3>Contact</h3>
-</div>
-</div>
+  <div id="home_quote">
+    <!-- some shit -->
+    <h1>This will be a quote</h1>
+  </div>
+  <div id='footer'>
+    <div id="info">
+        <a href="https://twitter.com/lextheboywonder" target="_blank" class='media'><img src="icons/twitter (1).png">
+        </a>
+        <a href="https://github.com/amihalopoulos" target="_blank" class='media'><img src="icons/github_alt.png">
+        </a>
+        <a href="http://www.google.com/+AlexanderMihalopoulos" target='_blank' class='media'><img src='icons/google_plus.png'>
+        </a>
+        <a href="http://www.linkedin.com/pub/alexander-mihalopoulos/5b/12/3b7/" target='_blank' class='media'><img src='icons/linkedin (1).png'>
+        </a>
+    </div>
+    <div id='contact'>
+      <p>C: 201-452-2492</p>
+      <p>Email: amihalop@gmail.com</p>
+    </div>
+  </div>
 </body>
