--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
+
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-  <title>Alexander Mihalopoulos</title>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="../stylesheets/newblogstyle.css">
+    <title>Alexander Mihalopoulos</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
 </head>
 
 <body>
-  <!--<div id="info">
-      <ul>
-        <li>
-          <a href="https://twitter.com/lextheboywonder" target="_blank"><img src=""></a>
-        </li>
-        <li></li>
-      </ul>
-  </div> -->
-  <div id="jumbotron">
-    <div id="title">
-        <h1>Alexander Mihalopoulos</h1>
-        <h4>NYC | Aspiring Web Developer | Student @ Dev Bootcamp <h2>
+    <div id='top_row'>
+        <h1 class='name'>Alexander A. <img id='pic' src='../icons/alexei-prof-black.png'> Mihalopoulos</h1>
     </div>
-  </div>
-  <div id="navbar">
-    <ul>
-      <li>
-        <a href="../index.html">Home</a>
-      </li>
-      <li>
-        <a href="../pages/about-me.html">About Me</a>
-      </li>
-      <li>
-        <a href="../blog/blog.html">Blog</a>
-      </li>
-      <li>
-        <a href="../pages/projects.html">Projects</a>
-      </li>
-      <li>
-        <a href="../pages/contact.html">Contact</a>
-      </li>
-  </div>
-
-<h3>Sorry! There's nothing here yet.. Check back soon!</h3>
-
+    <div id="navbar">
+        <ul>
+            <li>
+                <a href="../index.html">Home</a>
+            </li>
+            <li>
+                <a href="#about-me">About</a>
+            </li>
+<!--             <li>
+                <a href="#projects">Projects</a>
+            </li> -->
+            <li>
+                <a href="../blog/blog.html">Blog</a>
+            </li>
+    </div>
+    <div id='project_wrapper'>
+        <!-- figure out how to make a -->
+        <h2> Project 1: Integrate HTML, CSS, and JavaScript to display and manipulate objects on the DOM</h2>
+        <div id='left'></div>
+        <div id='right'>
+            <h1>Escape the Dogcatchers</h1>
+            <p> This game represents my introduction to JavaScript and DOM. From this project, I learned how to use JavaScript to manipulate the CSS of HTML elements. Forgive the lack of complexity, my only goal for this project was to build a foundation of knowledge for DOM. Please try it out and let me know what you think!<br><a href='../5-design-cc-mission-solo-challenge/dogGame.html'>Play!</a>
+        </div>
+    </div>
+    <div id='footer'>
+        <div id="info">
+            <a href="https://twitter.com/lextheboywonder" target="_blank" class='media'><img src="../icons/twitter (1).png">
+            </a>
+            <a href="https://github.com/amihalopoulos" target="_blank" class='media'><img src="../icons/github_alt.png">
+            </a>
+            <a href="http://www.google.com/+AlexanderMihalopoulos" target='_blank' class='media'><img src='../icons/google_plus.png'>
+            </a>
+            <a href="http://www.linkedin.com/pub/alexander-mihalopoulos/5b/12/3b7/" target='_blank' class='media'><img src='../icons/linkedin (1).png'>
+            </a>
+        </div>
+        <div id='contact'>
+            <p>C: 201-452-2492</p>
+            <p>Email: amihalop@gmail.com</p>
+        </div>
+    </div>
 </body>
