--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
-
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Alexander Mihalopoulos</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheet.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="css/blog-stylesheet.css">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/ico" href="icons/alexei-prof-black.png" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/home.js"></script>
 
-<body>
-  <div id='top_row'>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+
+    <header id="top" class="header">
+        <div class="text-vertical-center">
+            <h1>Alexei Mihalopoulos</h1>
+            <h5>Full Stack Web Developer</h5>
+            <h5>Here is my <a href="pages/CV_MIHALOPOULOS.pdf" target="_blank">resume</a></h5>
+            <h5 id="projects">Here are some <a href="#" id="project_link">projects I've worked on</a></h5>
+            <div class="list hidden">
+              <p><a href="./pages/2048.html">2048</a></p>
+              <p><a href="tubegenius.herokuapp.com">TubeGenius</a></p>
+            </div>
+            <h5>Send me a <a href="mailto:amihalop@gmail.com" target="_top" class="media">message</a></h5>
+
+            <br>
+            <div id="info">
+                <!-- <a href="https://twitter.com/lextheboywonder" target="_blank" class='media'><img src="icons/twitter (1).png">
+                </a> -->
+                <!-- <a href="mailto:amihalop@gmail.com" target="_top" class="media"><img src='icons/email.png'></a> -->
+                <a href="https://github.com/amihalopoulos" target="_blank" class='media'><img src="icons/github_alt.png">
+                </a>
+                <a href="http://www.linkedin.com/pub/alexander-mihalopoulos/5b/12/3b7/" target='_blank' class='media'><img src='icons/linkedin (1).png'>
+                </a>
+                <a href="http://www.google.com/+AlexanderMihalopoulos" target='_blank' class='media'><img src='icons/google_plus.png'>
+                </a>
+            </div>
+
+        </div>
+
+    </header>
+
+
+<!-- Old stuff -->
+ <!--    <div id='top_row'>
       <h1 class='name'>Alexander A. <img id='pic' src='icons/alexei-prof-black.png'> Mihalopoulos</h1>
   </div>
   <div id="navbar">
@@ -26,7 +72,7 @@
       </li>
   </div>
   <div id="home_quote">
-    <!-- some shit -->
+    <!--
     <h1>This will be a quote</h1>
   </div>
   <div id='footer'>
@@ -44,5 +90,11 @@
       <p>C: 201-452-2492</p>
       <p>Email: amihalop@gmail.com</p>
     </div>
-  </div>
-</body>
+  </div> -->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
