new html layout

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -7,24 +7,24 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crafty+Girls' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <title>Oral Care for Infants</title>
 </head>
 
 <body>
-    <div id="wrapper">
-        <!-- Topbar -->
-        <div id="topbar">
-            <h1>Oral Care for Infants (OCFI) <span><a href="#">English</a> | <a href="#">Español</a></span></h1>
-            <p>An educational tool to teach pregnant and new moms about proper dental care for their newborn or toddler </p>
+    <div class="header">
+        <div class="header-inner">
+            <h1>Oral Care for Infants (OCFI)
+                <span><a href="#">English</a> | <a href="#">Español</a></span>
+            </h1>
+            <p>An Educational Tool to Teach Pregnant and New Moms about Proper Dental Care for Their Newborn or Toddler </p>
         </div>
-        <!-- /Topbar -->
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
+    </div>
+<div class="content">
+    <div class="sidebar left">
+        <div class="sidebar-inner">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="../index.html">Home</a>
@@ -56,8 +56,8 @@
                 </li>
             </ul>
         </div>
-        <!-- /#sidebar-wrapper -->
-
+    </div>
+    <div class="content-inner">
         <div class="about_row">
             <h2>The Team</h2>
             <div class="pic_description">
@@ -73,15 +73,10 @@
             <br>
             Questions? Email <a href="mailto:OralCareForInfants@gmail.com" target="_top" class="media">OralCareForInfants@gmail.com</a>
         </div>
-
-        <!-- <div class="row">
-            <div class="box">
-                <img class="boxes" src="../imgs/OCFI_BRIT.jpg" alt="" />
-                <img class="boxes" src="../imgs/OCFI_BRIT2.jpg" alt="" />
-
-            </div>
-            <p>hello</p>
-        </div> -->
+    </div>
+    <div class="footer">
+        <div class="footer-inner"></div>
+    </div>
 
 </body>
 
