--- a/pages/myths.html
+++ b/pages/myths.html
@@ -7,16 +7,153 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crafty+Girls' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <title>Oral Care for Infants</title>
 </head>
 
 <body>
-    <h2>myths</h2>
+    <div class="header">
+        <div class="header-inner">
+            <h1>Oral Care for Infants (OCFI)
+                <span><a href="#">English</a> | <a href="#">Español</a></span>
+            </h1>
+            <p>An Educational Tool to Teach Pregnant and New Moms about Proper Dental Care for Their Newborn or Toddler </p>
+        </div>
+    </div>
+<div class="content">
+    <div class="sidebar left">
+        <div class="sidebar-inner">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="../index.html">Home</a>
+                </li>
+                <li>
+                    <a href="../pages/mission.html">Mission</a>
+                </li>
+                <li>
+                    <a href="../pages/oralCareDuringPregnancy.html">Oral Care During Pregnancy</a>
+                </li>
+                <li>
+                    <a href="../pages/myths.html">Dental Myths and FAQS</a>
+                </li>
+
+                <li>
+                    <a href="../pages/howtobrush.html">How to Brush and Floss</a>
+                </li>
+                <li>
+                    <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
+                </li>
+                <li>
+                    <a href="../pages/todolist.html">To Do List for Infant Oral Health</a>
+                </li>
+                <li>
+                    <a href="../pages/videos.html">Video Library</a>
+                </li>
+                <li>
+                    <a href="../pages/aboutus.html">Contact/About Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="content-inner">
+    <div class="row">
+    <h2>Dental Myths and Facts During Pregnancy</h2>
+    <ol>
+        <li>
+            Radiation can harm my baby and I shouldn’t expose myself to dental x-rays
+            <ul>
+                <li>
+                    MYTH
+                </li>
+                <li>
+                    X-ray exposure from a single diagnostic procedure does not result in harmful fetal effects.
+                </li>
+            </ul>
+        </li>
+        <li>
+            Pregnancy may cause unexpected oral health changes due to hormones
+            <ul>
+                <li>
+                    FACT:
+                </li>
+                <li>
+                    This is why it is important to see your dentist regularly during pregnancy, as these hormonal changes may lead to oral changes and cause gum disease.
+                </li>
+            </ul>
+        </li>
+        <li>
+            My gingivitis can impact my babies health
+            <ul>
+                <li>FACT</li>
+                <li>
+                    Research suggests a link between pre-term delivery, low birth-weight babies, and gingivitis. Excessive bacteria can enter the bloodstream through your gums; the bacteria can travel to the uterus, triggering the production of chemicals called prostaglandins, which are suspected to induce premature labor.
+
+                </li>
+            </ul>
+        </li>
+        <li>
+            I shouldn’t worry about seeing the dentist during my pregnancy because I’m already seeing my doctor
+            <ul>
+                <li>MYTH</li>
+                <li>It is essential that you see your dentist during your pregnancy. Going to the dentist will help promote healthy oral health behaviors which may reduce transmission of bacteria from mothers to their infants and young children, thereby delaying or preventing the onset of caries. Keep in mind, most infants acquire strep mutans (cavity-causing bacteria) from their mothers.
+                There is no evidence relating early spontaneous miscarriage to first trimester oral health care or dental procedures.</li>
+            </ul>
+        </li>
+        <li>
+            Use of local anesthesia is okay during pregnancy
+            <ul>
+                <li>FACT</li>
+                <li>Use of local anesthesia is okay during pregnancy with no additional fetal or maternal risk when compared to the risk of not getting provided the appropriate dental care.</li>
+            </ul>
+        </li>
+        <li>
+            I should wait to treat my periodontal disease until after my baby is born
+            <ul>
+                <li>MYTH</li>
+                <li>Prenatal periodontal therapy is associated with the improvement of maternal oral health. Also, there is no evidence relating early spontaneous miscarriage to first trimester oral health care or dental procedures.</li>
+            </ul>
+        </li>
+        <li>
+            Despite the complexity of symptoms and challenges of preeclampsia in patient management, having preeclampsia does not mean you should avoid seeking dental care.
+            <ul>
+                <li>FACT</li>
+                <li>Preeclampsia is a pregnancy complication characterized by high blood pressure and signs of damage to another organ system, often the kidneys. Preeclampsia usually begins after 20 weeks of pregnancy in a woman whose blood pressure had been normal. Even a slight rise in blood pressure may be a sign of preeclampsia. However, if you have preeclampsia and are experiencing any dental complications, it is still essential that you visit the dentist and seek proper treatment. </li>
+            </ul>
+        </li>
+        <li>
+            My mouth is feeling abnormally dry during my pregnancy, its probably nothing.
+            <ul>
+                <li>MYTH</li>
+                <li>Physiologic xerostomia (abnormal dryness of the mouth) is a common oral complaint which can be treated with over the counter saliva substitutes and prescription medication. Talk to your dentist or doctor about this problem if think you are experiencing xerostomia.
+                </li>
+            </ul>
+        </li>
+        <li>
+            Nausea and vomiting during pregnancy won’t affect my teeth.
+            <ul>
+                <li>MYTH</li>
+                <li>Nausea and vomiting during pregnancy (NVP) are very common. 70-85% of women experience these symptoms, Although NVP is predominantly associated with early pregnancy, some women continue to experience it past the first trimester. Hyperemesis gravidarum is a severe form of NVP that occurs in about 0.3-2.0% of pregnancies and may lead to surface enamel loss primarily through acid erosion.
+                </li>
+            </ul>
+        </li>
+        <li>
+            It’s possible to get a tumor-like growth in my mouth during my pregnancy.
+            <ul>
+                <li>FACT</li>
+                <li>In addition to generalized gingival changes, pregnancy may also cause single, tumor-like growths of gingival enlargement. It often grows rapidly and doesn’t typically become larger than 2 cm in diameter. Poor oral hygiene invariably is present, and often there are deposits of plaque or calculus on the teeth next to the lesion. Before delivery a proper cleaning should be done to reduce the plaque retention. Generally, the growth will regress after birth. There are situations when the lesion needs to be excised during pregnancy. However if the growth is removed during pregnancy it is possible that it will re-form.</li>
+            </ul>
+        </li>
+
+    </ol>
+    </div>
+
+    </div>
+    <div class="footer">
+        <div class="footer-inner"></div>
+    </div>
+
 </body>
 
 </html>
