--- a/pages/oralCareDuringPregnancy.html
+++ b/pages/oralCareDuringPregnancy.html
@@ -7,16 +7,65 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JS -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crafty+Girls' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <title>Oral Care for Infants</title>
 </head>
 
 <body>
-<h2>oral care during pregnancy</h2>
+    <div class="header">
+        <div class="header-inner">
+            <h1>Oral Care for Infants (OCFI)
+                <span><a href="#">English</a> | <a href="#">Español</a></span>
+            </h1>
+            <p>An Educational Tool to Teach Pregnant and New Moms about Proper Dental Care for Their Newborn or Toddler </p>
+        </div>
+    </div>
+<div class="content">
+    <div class="sidebar left">
+        <div class="sidebar-inner">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="../index.html">Home</a>
+                </li>
+                <li>
+                    <a href="../pages/mission.html">Mission</a>
+                </li>
+                <li>
+                    <a href="../pages/oralCareDuringPregnancy.html">Oral Care During Pregnancy</a>
+                </li>
+                <li>
+                    <a href="../pages/myths.html">Dental Myths and FAQS</a>
+                </li>
+
+                <li>
+                    <a href="../pages/howtobrush.html">How to Brush and Floss</a>
+                </li>
+                <li>
+                    <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
+                </li>
+                <li>
+                    <a href="../pages/todolist.html">To Do List for Infant Oral Health</a>
+                </li>
+                <li>
+                    <a href="../pages/videos.html">Video Library</a>
+                </li>
+                <li>
+                    <a href="../pages/aboutus.html">Contact/About Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="content-inner">
+        <div class="row">
+            <h2>Oral Care During Pregnancy</h2>
+        </div>
+
+    </div>
+    <div class="footer">
+        <div class="footer-inner"></div>
+    </div>
 
 </body>
 
