--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="./pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
                 </li>
                 <li>
-                    <a href="./pages/todolist.html">To Do List for Infant Oral Health</a>
+                    <a href="./pages/todolist.html">To Do List for Pregnant Women</a>
                 </li>
                 <li>
                     <a href="./pages/videos.html">Video Library</a>
