--- a/pages/oralCareDuringPregnancy.html
+++ b/pages/oralCareDuringPregnancy.html
@@ -46,7 +46,7 @@
                     <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
                 </li>
                 <li>
-                    <a href="../pages/todolist.html">To Do List for Infant Oral Health</a>
+                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
                 </li>
                 <li>
                     <a href="../pages/videos.html">Video Library</a>
@@ -59,7 +59,79 @@
     </div>
     <div class="content-inner">
         <div class="row">
-            <h2>Oral Care During Pregnancy</h2>
+            <h2>Common Oral Health Conditions During Pregnancy</h2>
+            <ol>
+                <li>
+                    <strong>Hormone changes</strong> when pregnant can increase signs of some dental problems such as Gum Disease (red, puffy, bleeding gums) as well as Premature Birth Weight (your baby being born too small)
+                </li>
+                <li>
+                    <strong>Gingivitis</strong> = inflammation (red, puffy bleeding) of gum tissue in the mouth
+                    <ul>
+                        <li>
+                            during pregnancy if you already have gingivitis, this gingivitis may cause a lump/tumor in the mouth
+                            <ul>
+                                <li>these are NOT cancer, but must be treated by a dentist</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Increased Risk of Infection</strong>
+                    <ul>
+                        <li>
+                            The immune system(which protects you from getting sick) is weakened when pregnant
+                        </li>
+                        <li>Be careful of open cuts/sores/wounds in mouth area since they can become easily infected</li>
+
+                    </ul>
+                </li>
+                <li>
+                    <strong>Dry Mouth (Cotton Mouth)</strong>
+                    <ul>
+                        <li>Treat by having good oral hygiene</li>
+                        <ul>
+                            <li>Rinse with a non-alcoholic mouth wash and use toothpaste with fluoride</li>
+                            <li>You can also try chewing gum</li>
+                        </ul>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Nauseous and Vomiting (Upset Stomach, Throwing Up)</strong>
+                    <ul>
+                        <li>70-85% of pregnant women experience these symptoms</li>
+                        <li>It is important to take ant-acids, such as TUMS/ROLAIDS/1 tsp Baking Powder + Water in order to control acid production in the stomach</li>
+                        <li>If not controlled, enamel loss can become a problem because stomach acid erodes (wears down) teeth</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Dental Caries</strong>
+                    <ul>
+                        <li>Can cause cavities</li>
+                        <li>Keep up with good oral hygiene by flossing, brushing teeth, and using mouth wash when pregnant</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Gestational Diabetes</strong>
+                    <ul>
+                        <li>A Condition in which women without previous history of diabetes have high blood sugar levels during pregnancy</li>
+                        <li>Signs/symptoms = easily tired, increased thirst/drinking liquids, increased/more frequent urination (peeing)</li>
+                        <li>Can be tried by your doctor, make sure you go to your doctor in order for them to monitor your blood sugar levels</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Preeclampsia (High blood pressure during pregnancy)</strong>
+                    <ul>
+                        <li>Can be a dangerous pregnancy complication characterized by high blood pressure</li>
+                        <li>Signs/symptoms = easily tired, nausea, blurry vision, bad headaches, swelling in legs or arms, decreased amount of urine (pee), weight gain</li>
+                        <li>Can be treated by your doctor, make sure you go to your doctor in order for them to monitor your blood pressure levels</li>
+                    </ul>
+                </li>
+
+            </ol>
+
+            <h4 style="text-decoration: underline;">Resources</h4>
+            <p>Dental Health and Wellness Boston. (n.d.). Retrieved July 30, 2015.</p>
+            <p>Pregnancy week by week. (n.d.). Retrieved July 30, 2015. </p>
         </div>
 
     </div>
