--- a/pages/todolist.html
+++ b/pages/todolist.html
@@ -46,7 +46,7 @@
                     <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
                 </li>
                 <li>
-                    <a href="../pages/todolist.html">To Do List for Infant Oral Health</a>
+                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
                 </li>
                 <li>
                     <a href="../pages/videos.html">Video Library</a>
@@ -59,7 +59,27 @@
     </div>
     <div class="content-inner">
         <div class="row">
-            <h2>To Do List</h2>
+            <h2>Oral Health Check List for Pregnant Women</h2>
+            <ul>
+                <li>Get a dental checkup and tell your dentist that you are pregnant. </li>
+                <ul>
+                    <li> It is safe to have dental care when you are pregnant.</li>
+                    <li>Talk to you medical doctor if you need help getting a dental appointment </li>
+                    <li>Do not put it off until after you have the baby.</li>
+                </ul>
+                <li>Brush your teeth twice a day (2X) with toothpaste that has fluoride. </li>
+                <li>Floss once a day (1X) to keep teeth and gums healthy.</li>
+                <li>Rinse at Night with an <strong>alcohol free</strong> mouthwash (Ask your dentist for a suggestion if you are not sure which one to get).</li>
+                <li>If you have ‘morning sickness’ or are throwing up/ sick to your stomach, try mixing a teaspoon of baking soda mixed in water to stop stomach acid from attacking your teeth.</li>
+                <li>Eat healthy foods such as vegetables, fruit and cheese.</li>
+                <li>Drink water and low-fat milk instead of soda.</li>
+                <li>Avoid foods and drinks that have a lot of sugar since they can cause tooth decay and cavities</li>
+                <li>If you have good oral health habits, your child will too! </li>
+                    <ul><li> Good oral health may reduce the risk of having a premature birth</li></ul>
+            </ul>
+
+            <h4 style="text-decoration: underline;">Resources</h4>
+            <p>Bertness J, Holt K, eds. 2012. Oral Health Care During Pregnancy: A Resource Guide. Washington, DC: National Maternal and Child Oral Health Resource Center. </p>
         </div>
 
     </div>
