--- a/pages/videos.html
+++ b/pages/videos.html
@@ -46,7 +46,7 @@
                     <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
                 </li>
                 <li>
-                    <a href="../pages/todolist.html">To Do List for Infant Oral Health</a>
+                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
                 </li>
                 <li>
                     <a href="../pages/videos.html">Video Library</a>
@@ -58,8 +58,12 @@
         </div>
     </div>
     <div class="content-inner">
-        <div class="row">
+        <div class="row videos">
             <h2>Videos</h2>
+            <div class="box"><iframe width="420" height="315" src="https://www.youtube.com/embed/oKaNlV45bB8" frameborder="0" allowfullscreen></iframe></div>
+            <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/_S5H7PT3J3E" frameborder="0" allowfullscreen></iframe>
+            </div>
+
         </div>
 
     </div>
