--- a/pages/mission.html
+++ b/pages/mission.html
@@ -33,25 +33,31 @@
                     <a href="../pages/mission.html">Mission</a>
                 </li>
                 <li>
-                    <a href="../pages/oralCareDuringPregnancy.html">Oral Care During Pregnancy</a>
+                    <a href="../pages/oralCareDuringPregnancy.html">Oral Conditions During Pregnancy</a>
+                </li>
+               <li>
+                    <a href="../pages/infantoralhealth.html">Oral Care for Infants</a>
                 </li>
                 <li>
-                    <a href="../pages/myths.html">Dental Myths and FAQS</a>
+                    <a href="../pages/myths.html">Dental Myths and Facts</a>
                 </li>
                 <li>
                     <a href="../pages/howtobrush.html">How to Brush and Floss</a>
                 </li>
                 <li>
-                    <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
+                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
                 </li>
                 <li>
-                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
+                    <a href="../pages/todoforInfants.html">To Do List for Infants</a>
                 </li>
                 <li>
                     <a href="../pages/videos.html">Video Library</a>
                 </li>
                 <li>
                     <a href="../pages/aboutus.html">Contact/About Us</a>
+                </li>
+                <li>
+                    <a href="../pages/dentalreference.html">Find Philly Dental Care</a>
                 </li>
             </ul>
         </div>
