--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -33,20 +33,23 @@
                     <a href="../pages/mission.html">Mission</a>
                 </li>
                 <li>
-                    <a href="../pages/oralCareDuringPregnancy.html">Oral Care During Pregnancy</a>
+                    <a href="../pages/oralCareDuringPregnancy.html">Oral Conditions During Pregnancy</a>
                 </li>
                 <li>
-                    <a href="../pages/myths.html">Dental Myths and FAQS</a>
+                    <a href="../pages/infantoralhealth.html">Oral Care for Infants</a>
+                </li>
+                <li>
+                    <a href="../pages/myths.html">Dental Myths and Facts</a>
                 </li>
 
                 <li>
                     <a href="../pages/howtobrush.html">How to Brush and Floss</a>
                 </li>
                 <li>
-                    <a href="../pages/gumdisease.html">Gestational Diabetes/Gum Disease</a>
+                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
                 </li>
                 <li>
-                    <a href="../pages/todolist.html">To Do List for Pregnant Women</a>
+                    <a href="../pages/todoforInfants.html">To Do List for Infants</a>
                 </li>
                 <li>
                     <a href="../pages/videos.html">Video Library</a>
@@ -54,11 +57,14 @@
                 <li>
                     <a href="../pages/aboutus.html">Contact/About Us</a>
                 </li>
+                <li>
+                    <a href="../pages/dentalreference.html">Find Philly Dental Care</a>
+                </li>
             </ul>
         </div>
     </div>
     <div class="content-inner">
-        <div class="about_row">
+        <div class="row">
             <h2>The Team</h2>
             <div class="pic_description">
                 <img src="../imgs/OCFI_BRIT4.jpg" alt="" class="circlepic">
@@ -69,9 +75,10 @@
                 <span>Kathryn <br> Second Year Dental Student at UPENN</span>
             </div>
         </div>
-        <div class="about_row">
+        <div class="row" style="text-align: center;">
             <br>
             Questions? Email <a href="mailto:OralCareForInfants@gmail.com" target="_top" class="media">OralCareForInfants@gmail.com</a>
+            <p>Special thanks to Nelly Alba for the Spanish translations!</p>
         </div>
     </div>
     <div class="footer">
