add footer text

--- a/pages/todoforInfants.html
+++ b/pages/todoforInfants.html
@@ -105,7 +105,10 @@
             </div>
         </div>
         <div class="footer">
-            <div class="footer-inner"></div>
+            <div class="footer-inner">
+              <h5>PLEASE NOTE:</h5>
+            The information given on our website is meant for educational purposes only. As dental students, we still recommend seeing your doctor and dentist during your pregnancy. During a serious medical emergency, call your doctor immediately.
+            </div>
         </div>
 </body>
 
