--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -66,7 +66,7 @@
         <div class="row">
             <h2>The Team</h2>
             <div class="pic_description">
-                <img src="../imgs/OCFI_BRIT4.jpg" alt="" class="circlepic">
+                <img src="../imgs/OCFI_BRIT4.jpg" alt="" id="brit" class="circlepic">
                 <span>Brittany <br> Second Year Dental Student at UPENN</span>
             </div>
             <div class="pic_description">
@@ -81,7 +81,10 @@
         </div>
     </div>
     <div class="footer">
-        <div class="footer-inner"></div>
+        <div class="footer-inner">
+            <h5>PLEASE NOTE:</h5>
+            The information given on our website is meant for educational purposes only. As dental students, we still recommend seeing your doctor and dentist during your pregnancy. During a serious medical emergency, call your doctor immediately.
+        </div>
     </div>
 
 </body>
