--- a/pages/todoforInfants.html
+++ b/pages/todoforInfants.html
@@ -65,6 +65,11 @@
         <div class="content-inner">
             <div class="row">
                 <h2>To-Do List for Infants’ Oral health</h2>
+                <div class="audio">
+                    <audio controls>
+                        <source src="../audio/to-doinfantOH.m4a" type="audio/mp4" />
+                    </audio>
+                </div>
                 <ul>
                     <li>
                         Start bringing your child to the dentist 6 months after the first baby (primary) tooth erupts.
