--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -77,7 +77,7 @@
         <div class="row" style="text-align: center;">
             <br>
             Questions? Email <a href="mailto:OralCareForInfants@gmail.com" target="_top" class="media">OralCareForInfants@gmail.com</a>
-            <p>Special thanks to Nelly Alba for the Spanish translations!</p>
+            <p>Special thanks to Nelly Alba for the Spanish translations and Alexei Mihalopoulos for the web development!</p>
         </div>
     </div>
     <div class="footer">
