--- a/pages/oralCareDuringPregnancy.html
+++ b/pages/oralCareDuringPregnancy.html
@@ -66,6 +66,12 @@
     <div class="content-inner">
         <div class="row">
             <h2>Common Oral Health Conditions During Pregnancy</h2>
+
+            <div class="audio">
+                <audio controls>
+                    <source src="../audio/CommonOralHealthComp.m4a" type="audio/mp4" />
+                </audio>
+            </div>
             <ol>
                 <li>
                     <strong>Hormone changes</strong> when pregnant can increase signs of some dental problems such as Gum Disease (red, puffy, bleeding gums) as well as Premature Birth Weight (your baby being born too small)
