audio/remove mission

--- a/pages/infantoralhealth.html
+++ b/pages/infantoralhealth.html
@@ -30,9 +30,6 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../pages/mission.html">Mission</a>
-                    </li>
-                    <li>
                         <a href="../pages/oralCareDuringPregnancy.html">Oral Conditions During Pregnancy</a>
                     </li>
                     <li>
@@ -65,6 +62,11 @@
         <div class="content-inner">
             <div class="row">
               <h2>Infant Oral Care FAQ</h2>
+                <div class="audio">
+                <audio controls>
+                    <source src="../audio/InfantOralCareFAQ.m4a" type="audio/mp4" />
+                </audio>
+                </div>
                 <h2>Why do I have to worry about cleaning my child's baby teeth?</h2>
                 <p>Baby teeth are very important. They aid your baby in chewing, speaking and are the precursors of the adult teeth. If the baby’s teeth aren’t cared for properly, they can decay and lead to infections in the permanent teeth. Taking proper care of your child’s teeth will ultimately lead to better care being taken during adulthood.</p>
                 <h2>Is there anything I can do to help my child have good oral care before they come in?</h2>
