--- a/pages/myths.html
+++ b/pages/myths.html
@@ -30,9 +30,6 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/mission.html">Mission</a>
-                </li>
-                <li>
                     <a href="../pages/oralCareDuringPregnancy.html">Oral Conditions During Pregnancy</a>
                 </li>
                <li>
@@ -66,6 +63,11 @@
     <div class="content-inner">
     <div class="row">
     <h2>Dental Myths and Facts During Pregnancy</h2>
+    <div class="audio">
+        <audio controls>
+            <source src="../audio/dentalMythsAndFacts.m4a" type="audio/mp4" />
+        </audio>
+    </div>
     <ol>
         <li>
             Radiation can harm my baby and I shouldn’t expose myself to dental x-rays
