--- a/pages/todolist.html
+++ b/pages/todolist.html
@@ -30,9 +30,6 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/mission.html">Mission</a>
-                </li>
-                <li>
                     <a href="../pages/oralCareDuringPregnancy.html">Oral Conditions During Pregnancy</a>
                 </li>
                <li>
@@ -66,6 +63,11 @@
     <div class="content-inner">
         <div class="row">
             <h2>Oral Health Check List for Pregnant Women</h2>
+            <div class="audio">
+                <audio controls>
+                    <source src="../audio/PregnancyCheckList.m4a" type="audio/mp4" />
+                </audio>
+            </div>
             <ul>
                 <li>Get a dental checkup and tell your dentist that you are pregnant. </li>
                 <ul>
