--- a/pages/videos.html
+++ b/pages/videos.html
@@ -30,9 +30,6 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="../pages/mission.html">Mission</a>
-                </li>
-                <li>
                     <a href="../pages/oralCareDuringPregnancy.html">Oral Conditions During Pregnancy</a>
                 </li>
                <li>
@@ -67,8 +64,8 @@
         <div class="row videos">
             <h2>Videos</h2>
             <div class="box"><iframe width="420" height="315" src="https://www.youtube.com/embed/oKaNlV45bB8" frameborder="0" allowfullscreen></iframe></div>
-            <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/_S5H7PT3J3E" frameborder="0" allowfullscreen></iframe>
-            </div>
+            <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/_S5H7PT3J3E" frameborder="0" allowfullscreen></iframe></div>
+            <div class="box"><iframe width="560" height="315" src="https://www.youtube.com/embed/GA9n8i3J0FI" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
 
