--- a/esp/todoforInfants.html
+++ b/esp/todoforInfants.html
@@ -19,11 +19,43 @@
             <h1>Oral Care for Infants (OCFI)
                 <span><a href="#">English</a> | <a href="#">Español</a></span>
             </h1>
-            <p>An Educational Tool to Teach Pregnant and New Moms about Proper Dental Care for Their Newborn or Toddler </p>
+            <p>Un sito para enseñar a las mujeres embarazadas sobre la salud dental para sus infantes y hijos.</p>
         </div>
     </div>
 <div class="content">
-
+    <div class="sidebar left">
+        <div class="sidebar-inner">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="../index.html">Home</a>
+                </li>
+                <li>
+                    <a href="../esp/oralCareDuringPregnancy.html">Condiciones Orales Durante El Embarazo</a>
+                </li>
+                <li>
+                    <a href="../esp/infantoralhealth.html">Oral Care for Infants</a>
+                </li>
+                <li>
+                    <a href="../esp/myths.html">Hechos y Mitos Dentales </a>
+                </li>
+                <li>
+                    <a href="../esp/todolist.html">Una lista de tareas para mujeres embarazadas</a>
+                </li>
+                <li>
+                    <a href="../esp/todoforInfants.html">Una lista de tareas para infantes </a>
+                </li>
+                <li>
+                    <a href="../pages/videos.html">Videoteca</a>
+                </li>
+                <li>
+                    <a href="../pages/aboutus.html">Sobre Nosotros </a>
+                </li>
+                <li>
+                    <a href="../pages/dentalreference.html">Buscar Un Dentista en Philadelphia </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="content-inner">
             <div class="row">
                 <h2>Lista de Qué Hacer para la Salud Oral de tu Bebe</h2>
@@ -68,10 +100,13 @@
                 </ul>
             </div>
         </div>
-
-
-
+<div class="footer">
+    <div class="footer-inner">
+        <h5>Atención:</h5>
+        La información en este sito es solamente para la educación. Siempre necesitas visitar el dentista y el doctor durante el embarazo. Durante una emergencia médica, llama el doctor inmediatamente.
+    </div>
 </div>
+
 </body>
 
 </html>
