--- a/esp/todolist.html
+++ b/esp/todolist.html
@@ -19,35 +19,70 @@
             <h1>Oral Care for Infants (OCFI)
                 <span><a href="#">English</a> | <a href="#">Español</a></span>
             </h1>
-            <p>An Educational Tool to Teach Pregnant and New Moms about Proper Dental Care for Their Newborn or Toddler </p>
+            <p>Un sito para enseñar a las mujeres embarazadas sobre la salud dental para sus infantes y hijos. </p>
         </div>
     </div>
 <div class="content">
 
+    <div class="sidebar left">
+        <div class="sidebar-inner">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="../index.html">Home</a>
+                </li>
+                <li>
+                    <a href="../esp/oralCareDuringPregnancy.html">Condiciones Orales Durante El Embarazo</a>
+                </li>
+                <li>
+                    <a href="../esp/infantoralhealth.html">Oral Care for Infants</a>
+                </li>
+                <li>
+                    <a href="../esp/myths.html">Hechos y Mitos Dentales </a>
+                </li>
+                <li>
+                    <a href="../esp/todolist.html">Una lista de tareas para mujeres embarazadas</a>
+                </li>
+                <li>
+                    <a href="../esp/todoforInfants.html">Una lista de tareas para infantes </a>
+                </li>
+                <li>
+                    <a href="../pages/videos.html">Videoteca</a>
+                </li>
+                <li>
+                    <a href="../pages/aboutus.html">Sobre Nosotros </a>
+                </li>
+                <li>
+                    <a href="../pages/dentalreference.html">Buscar Un Dentista en Philadelphia </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
  <div class="content-inner">
         <div class="row">
-            <h2>Oral Health Check List for Pregnant Women</h2>
+            <h2>Lista de verificación de salud bucal para mujeres embarazadas</h2>
             <div class="audio">
                 <audio controls>
-                    <source src="../audio/PregnancyCheckList.m4a" type="audio/mp4" />
+                    <source src="../audio/Lista1.m4a" type="audio/mp4" />
                 </audio>
             </div>
             <ul>
-                <li>Get a dental checkup and tell your dentist that you are pregnant. </li>
+                <li>Hacer una cita dental y decirle a su dentista que esta embarazada. </li>
                 <ul>
-                    <li> It is safe to have dental care when you are pregnant.</li>
-                    <li>Talk to you medical doctor if you need help getting a dental appointment </li>
-                    <li>Do not put it off until after you have the baby.</li>
+                    <li>Es saludable y seguro obtener un chequeo dental cuando esta embarazada.</li>
+                    <li>Habla con tu doctor si necesita ayuda haciendo una cita dental.</li>
+                    <li>NO espera hasta que de a luz.</li>
                 </ul>
-                <li>Brush your teeth twice a day (2X) with toothpaste that has fluoride. </li>
-                <li>Floss once a day (1X) to keep teeth and gums healthy.</li>
-                <li>Rinse at Night with an <strong>alcohol free</strong> mouthwash (Ask your dentist for a suggestion if you are not sure which one to get).</li>
-                <li>If you have ‘morning sickness’ or are throwing up/ sick to your stomach, try mixing a teaspoon of baking soda mixed in water to stop stomach acid from attacking your teeth.</li>
-                <li>Eat healthy foods such as vegetables, fruit and cheese.</li>
-                <li>Drink water and low-fat milk instead of soda.</li>
-                <li>Avoid foods and drinks that have a lot of sugar since they can cause tooth decay and cavities</li>
-                <li>If you have good oral health habits, your child will too! </li>
-                    <ul><li> Good oral health may reduce the risk of having a premature birth</li></ul>
+                <li>Cepíllate los dientes dos veces al día con pasta de diente que tenga fluoruro.</li>
+                <li>Usa hila dental una vez al día para que mantenga sus dientes y encías saludable.</li>
+                <li>Enjuágate los dientes de noche con enjuague bucal <strong> que no tenga alcohol </strong> (pregúntale a su dentista para sugerencia si no sabe cual usar)</li>
+                <li>Si te encuentra enferma por la mañana o esta vomitando, trata de mezclar una cucharita de bicarbonato de sodio mezclado en agua para prevenir acido estomacal atacando sus dientes.</li>
+                <li>Tiene que comer comida saludable como vegetales, frutas y queso.</li>
+                <li>Bebe agua y leche bajo de grasa en lugar de soda.</li>
+                <li>Evita comidas y bebidas que tengan mucha azúcar porque pueden causar caries y cavidades</li>
+                <li>Si tiene buenas hábitos con tu salud oral, sus niños también lo tendrán </li>
+                    <ul><li> buena salud oral puede reducir el riesgo de tener un nacimiento prematura</li></ul>
             </ul>
 
             <h4 style="text-decoration: underline;">Resources</h4>
@@ -55,12 +90,13 @@
         </div>
 
     </div>
-
-
-
-
-
+<div class="footer">
+    <div class="footer-inner">
+        <h5>Atención:</h5>
+        La información en este sito es solamente para la educación. Siempre necesitas visitar el dentista y el doctor durante el embarazo. Durante una emergencia médica, llama el doctor inmediatamente.
+    </div>
 </div>
+
 </body>
 
 </html>
